ey-cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eycart-deploy
  namespace: eycart-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: eycart
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  template:
    metdata:
      labels:
        app: eycart
    spec:
      container:
        - name: eycart-app-cont
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: eycart-svc
  namespace: eycart-ns
spec:
  selector:
    app: eycart
  ports:
  - port: 3001
    targetPort: 3000
  type: ClusterIP
