fitness-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fitness-deploy
  namespace: fitness-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: fitness
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  template:
    metdata:
      labels:
        app: fitness
    spec:
      container:
        - name: fitness-app-cont
          image: muralisocial123/fitness-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: fitness-svc
  namespace: fitness-ns
spec:
  selector:
    app: fitness
  ports:
    - port: 5000
      targetPort: 5000
  type: ClusterIP
