transaction-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transaction-deploy
  namespace: nimesh-ns
spec:
  replicas: 4
  selector:
    matchLabels:
      app: transaction
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  template:
    metadata:
      labels:
        app: transaction
    spec:
      containers:
        - name: transaction-app-cont
          image: muralisocial123/transaction-app:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: transaction-svc
  namespace: nimesh-ns
spec:
  selector:
    app: transaction
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
