ey-cart-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ey-cart-route
  namespace: nimesh-ns
spec:
  parentRefs:
    - name: microservice-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /cart
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /cart
      backendRefs:
        - name: eycart-svc
          port: 3001
